# 70EC63D0-FF16-4B3E-B716-A63BFC3FB65A

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  abacus.c  abacus.h  main.c  romancalc.c  romancalc.h
tests/: Makefile.am  check_abacus.c  check_romancalc.c  check_romancalc.h  check_romancalc_main.c
